dnl Process this file with autoconf to produce a configure script.

AC_PREREQ(2.69)
AC_INIT(Nautilus-Sendto-ITS, 0.4, mbooth@fedoraproject.org, nautilus-sendto-its, https://github.com/mbooth101/nautilus-sendto-its)

AC_CONFIG_MACRO_DIR([m4])

AC_CANONICAL_SYSTEM
AM_INIT_AUTOMAKE()

AM_DISABLE_STATIC
AC_PROG_CC
AC_PROG_LIBTOOL

NAUTILUS_SENDTO_REQUIRED=2.32.0
SOUP_REQUIRED=2.28.0
KEYRING_REQUIRED=2.22.0
GCONF_REQUIRED=2.14.0

PKG_CHECK_MODULES(NAUTILUS_SENDTO, nautilus-sendto >= $NAUTILUS_SENDTO_REQUIRED)
PKG_CHECK_MODULES(SOUP, libsoup-2.4 >= $SOUP_REQUIRED)
PKG_CHECK_MODULES(KEYRING, gnome-keyring-1 >= $KEYRING_REQUIRED)
PKG_CHECK_MODULES(GCONF, gconf-2.0 >= $GCONF_REQUIRED)

AC_CONFIG_FILES(Makefile src/Makefile)
AC_OUTPUT

